<resources>
    <string name="appName">צבע אדום</string>
    <string name="loading">נא להמתין…</string>
    <string name="signing_up">נרשם לשירות עדכוני צבע אדום…</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="okay">בסדר</string>
    <string name="error">שגיאה</string>
    <string name="update">עדכון גרסה</string>
    <string name="updateDesc">יצאה גרסה חדשה יותר של היישומון (%s), מומלץ לעדכן.</string>
    <string name="updatePositive">לעדכן</string>
    <string name="notNow">לא עכשיו</string>
    <string name="noAlerts">אין התרעות\nמהיום האחרון</string>
    <string name="recentAlerts">התרעות אחרונות</string>
    <string name="settings">הגדרות</string>
    <string name="advanced">אפשרויות</string>
    <string name="alerts">התרעות</string>
    <string name="advancedAlerts">התרעות מתקדמות</string>
    <string name="advancedSettings">הגדרות מתקדמות</string>
    <string name="advancedSettingsTitle">הגדרות מתקדמות</string>
    <string name="advancedSettingsDesc">עריכת הגדרות התרעה מתקדמות</string>
    <string name="notifications">התרעות בזמן אמת</string>
    <string name="notificationsDesc">קבלת התרעות צבע אדום בזמן אמת</string>
    <string name="pauseOrTurnOffTitle">להשהות או לכבות?</string>
    <string name="turnOffNotificationsCompletely">לכבות התרעות לחלוטין</string>
    <string name="pauseAlertsOneHour">להשהות שעה</string>
    <string name="pauseAlertsTwoHours">להשהות שעתיים</string>
    <string name="pauseAlertsFourHours">להשהות 4 שעות</string>
    <string name="pauseAlertsEightHours">להשהות 8 שעות</string>
    <string name="pauseAlertsUntilMorning">להשהות עד הבוקר (08:00)</string>
    <string name="alertRegions">אזורי התרעה</string>
    <string name="secondaryAlertsTitle">התרעות משנה</string>
    <string name="secondaryAlertsDesc">הגדרת התרעות משנה כדי להתעדכן על אזורים אחרים במקביל</string>
    <string name="receiveSecondaryAlerts">התרעות משנה</string>
    <string name="receiveSecondaryAlertsDesc">קבלת התרעות משנה בזמן אמת</string>
    <string name="secondarySoundSelection">צליל משנה</string>
    <string name="secondarySoundSelectionDesc">בחירת הצליל שיושמע כשתתקבל התרעת משנה</string>
    <string name="selectedSecondaryCities">יישובי משנה</string>
    <string name="selectedSecondaryCitiesDesc">בחירת היישובים והערים שעבורם יתקבלו התרעות משנה</string>
    <string name="selectedZones">מרחבים נוספים</string>
    <string name="selectedZonesDesc">בחירת מרחבים שלמים שעבורם יתקבלו התרעות בנוסף ליישובים</string>
    <string name="selectedCities">יישובים</string>
    <string name="selectedCitiesDesc">בחירת יישובים וערים שעבורם יתקבלו התרעות בזמן אמת</string>
    <string name="test">בדיקה עצמית</string>
    <string name="testDesc">שליחת התרעה המדמה אזעקת צבע אדום</string>
    <string name="reliability">אמינות</string>
    <string name="sounds">צלילים</string>
    <string name="soundSelection">צליל אזעקת אמת</string>
    <string name="soundSelectionDesc">בחירת הצליל שיושמע כשתתקבל התרעת צבע אדום</string>
    <string name="vibrate">הפעלת רטט</string>
    <string name="vibrateDesc">כשתתקבל אזעקת אמת, המכשיר ירטוט</string>
    <string name="secondaryVibrate">הפעלת רטט</string>
    <string name="secondaryVibrateDesc">כשתתקבל התרעת משנה, המכשיר ירטוט</string>
    <string name="silentOverride">עקיפת מצב שקט</string>
    <string name="silentOverrideDesc">כשתתקבל אזעקת אמת, מצב שקט לא יחסום אותה</string>
    <string name="secondarySilentOverride">עקיפת מצב שקט</string>
    <string name="secondarySilentOverrideDesc">כשתתקבל התרעת משנה, מצב שקט לא יחסום אותה</string>
    <string name="earlyWarnings">התרעות מקדימות</string>
    <string name="earlyWarningsDesc">הגדרת ההתרעות המקדימות שיתקבלו כ־5 דקות לפני התרעות האמת</string>
    <string name="receiveEarlyWarningsDesc">קבלת ההתרעות המקדימות כ־5 דקות לפני התרעות האמת</string>
    <string name="earlyWarningsSoundSelection">צליל ההתרעות המקדימות</string>
    <string name="earlyWarningsSoundSelectionDesc">בחירת הצליל שיושמע כשתתקבל התרעה מקדימה</string>
    <string name="leaveShelterAlerts">התרעות סיום ההתגוננות</string>
    <string name="leaveShelterDesc">הגדרת ההתרעות המנחות על יציאה מהמרחב המוגן</string>
    <string name="receiveLeaveShelterAlertsDesc">קבלת ההתרעות המנחות על יציאה מהמרחב המוגן</string>
    <string name="leaveShelterAlertsSoundSelection">צליל התרעות סיום ההתגוננות</string>
    <string name="leaveShelterAlertsSoundSelectionDesc">בחירת הצליל שיושמע כשתתקבל התרעת סיום ההתגוננות</string>
    <string name="safeCategory">”אני במרחב מוגן“</string>
    <string name="safeWhatsApp">שליחה באמצעות WhatsApp</string>
    <string name="safeWhatsAppDesc">לחיצה על כפתור הדיווח תוביל ישירות לבחירת אנשי הקשר</string>
    <string name="languageAndTheme">שפה ועיצוב</string>
    <string name="langSelection">בחירת השפה (Language)</string>
    <string name="langSelectionDesc">בחירת השפה עבור ממשק היישומון</string>
    <string name="themeSelection">בחירת העיצוב</string>
    <string name="themeSelectionDesc">בחירת העיצוב עבור ממשק היישומון</string>
    <string name="contact">ליצירת קשר</string>
    <string name="contactDesc">ליצירת קשר בעזרת שליחת דוא״ל</string>
    <string name="reportProblem">דיווח על תקלה</string>
    <string name="donate">תרומות יתקבלו בברכה</string>
    <string name="donateDesc">כל תרומה תעזור בכיסוי עלויות הפיתוח והשרתים</string>
    <string name="rateApp">דירוג היישומון</string>
    <string name="rateAppDesc">לדירוג בחנות של גוגל</string>
    <string name="volume">עוצמת הצליל</string>
    <string name="volumeDesc">בחירת עוצמת הצליל לאזעקות אמת</string>
    <string name="secondaryVolume">עוצמת הצליל</string>
    <string name="secondaryVolumeDesc">בחירת עוצמת הצליל להתרעות המשנה</string>
    <string name="website">ביקור באתר שלנו</string>
    <string name="websiteDesc">ביקור באתר הרשמי של היישומון</string>
    <string name="locationAlerts">התרעות לפי מיקום</string>
    <string name="locationAlertsDesc">הגדרת התרעות מבוססות מיקום כדי לקבל התרעות תוך כדי תנועה</string>
    <string name="gpsEnabled">התרעות לפי מיקום</string>
    <string name="gpsEnabledDesc">קבלת התרעות לפי מיקומך בזמן אמת</string>
    <string name="maxDistance">מרחק מקסימלי</string>
    <string name="maxDistanceDesc">בחירת המרחק המקסימלי שלך מכל יישוב שמופעלת בו אזעקה</string>
    <string name="nearbyCities">יישובים בקרבתך</string>
    <string name="gpsFrequency">קצב הדגימה</string>
    <string name="gpsFrequencyDesc">הגדרת הקצב שבו היישומון יאכן את מיקומך</string>
    <string name="shareAlert">שיתוף האזעקה</string>
    <string name="wakeScreen">הדלקת המסך</string>
    <string name="wakeScreenDesc">כשתתקבל אזעקת אמת, מסך הטלפון יידלק</string>
    <string name="showPopup">הצגת הודעות קופצות</string>
    <string name="showPopupDesc">כשתתקבל אזעקת אמת, תוצג הודעה קופצת ובה ספירה לאחור עד לזמן הנפילה המשוער</string>
    <string name="showSecondaryAlertPopupDesc">כשתתקבל התרעת משנה, תוצג הודעה קופצת ובה ספירה לאחור עד לזמן הנפילה המשוער</string>
    <string name="foregroundService">שיפור האמינות</string>
    <string name="foregroundServiceDesc">הצגת התראה קבועה שתמנע ממערכת ההפעלה לכבות את היישומון ברקע</string>
    <string name="disableBatteryOptimizationsReminder">חשוב: ביטול אופטימיזציות סוללה</string>
    <string name="disableBatteryOptimizationsReminderDesc">זיהינו כי אופטימיזציות הסוללה עבור היישומון עוד לא בוטלו. כדי לקבל התרעות צבע אדום בזמן אמת, יש לבטל אופטימיזציות סוללה. יש ללחוץ כאן למידע נוסף.</string>
    <string name="clearRecentAlerts">למחוק את ההתרעות האחרונות?</string>
    <string translatable="false" name="selfTestPref">test</string>
    <string translatable="false" name="langPref">lang</string>
    <string translatable="false" name="themePref">theme</string>
    <string translatable="false" name="soundPref">sound</string>
    <string translatable="false" name="websitePref">website</string>
    <string translatable="false" name="donatePref">donate</string>
    <string translatable="false" name="ratePref">rating</string>
    <string translatable="false" name="contactPref">contact</string>
    <string translatable="false" name="advancedPref">advanced</string>
    <string translatable="false" name="enabledPref">enabled</string>
    <string translatable="false" name="vibratePref">vibrate</string>
    <string translatable="false" name="locationAlertsPref">location_alerts_v2</string>
    <string translatable="false" name="gpsFrequencyPref">gps_frequency_v2</string>
    <string translatable="false" name="maxDistancePref">max_distance_v2</string>
    <string translatable="false" name="secondaryVibratePref">secondary_vibrate</string>
    <string translatable="false" name="volumePref">volume</string>
    <string translatable="false" name="locationPref">location</string>
    <string translatable="false" name="nearbyCitiesPref">nearby_cities</string>
    <string translatable="false" name="secondaryVolumePref">secondary_volume</string>
    <string translatable="false" name="alertPopupPref">alert_popup_v2</string>
    <string translatable="false" name="secondaryAlertPopupPref">secondary_alert_popup_v2</string>
    <string translatable="false" name="foregroundServicePref">foreground_service</string>
    <string translatable="false" name="wakeScreenPref">wake_screen</string>
    <string translatable="false" name="silentOverridePref">override</string>
    <string translatable="false" name="selectedZonesPref">selected_zones</string>
    <string translatable="false" name="mainSettingsScreen">main_settings</string>
    <string translatable="false" name="mainCategoryPref">main_category</string>
    <string translatable="false" name="batteryOptimizationPref">battery_optimization</string>
    <string translatable="false" name="batteryOptimizationCategory">battery_optimization_category</string>
    <string translatable="false" name="selectedCitiesPref">selected_cities</string>
    <string translatable="false" name="secondaryPref">secondary</string>
    <string translatable="false" name="earlyWarningsPref">early</string>
    <string translatable="false" name="leaveShelterAlertsPref">leave_shelter</string>
    <string translatable="false" name="imSafeWhatsAppPref">safe_whatsapp</string>
    <string translatable="false" name="secondarySilentOverridePref">secondary_override</string>
    <string translatable="false" name="earlyWarningsEnabledPref">early_warning_alerts</string>
    <string translatable="false" name="leaveShelterAlertsEnabledPref">leave_shelter_alerts</string>
    <string translatable="false" name="earlyWarningsSoundPref">early_warning_sound</string>
    <string translatable="false" name="leaveShelterAlertsSoundPref">leave_shelter_sound</string>
    <string translatable="false" name="secondaryEnabledPref">secondary_alerts</string>
    <string translatable="false" name="secondarySoundPref">secondary_sound</string>
    <string translatable="false" name="selectedSecondaryCitiesPref">selected_secondary_cities</string>
    <string name="defaultAlertVolume" translatable="false">1.0</string>
    <string translatable="false" name="minGPSDistance">0.02</string>
    <string translatable="false" name="defaultGPSMaxDistance">0.04</string>
    <string translatable="false" name="minGPSPollingFrequency">0.03</string>
    <string translatable="false" name="defaultGPSPollingFrequency">0.09</string>
    <string translatable="false" name="all">all</string>
    <string translatable="false" name="none">none</string>
    <string translatable="false" name="automaticThemeCode">auto</string>
    <string translatable="false" name="defaultSound">alarm1</string>
    <string translatable="false" name="defaultSecondarySound">tiny</string>
    <string translatable="false" name="defaultEarlyWarningSound">tiny</string>
    <string translatable="false" name="defaultLeaveShelterSound">tiny6</string>
    <string translatable="false" name="defaultZoom">7.8</string>
    <string translatable="false" name="defaultLatitude">31.401331884548895</string>
    <string translatable="false" name="defaultLongitude">34.84646325081433</string>
</resources>