<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:redalert="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/secondaryAlertsTitle">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/settings">
        <SwitchPreferenceCompat
            android:key="@string/secondaryEnabledPref"
            android:title="@string/receiveSecondaryAlerts"
            android:summary="@string/receiveSecondaryAlertsDesc"
            app:iconSpaceReserved="false"
            android:icon="@drawable/ic_notifications_none"
            app:widgetLayout="@layout/preference_widget_switch_material3"
            android:widgetLayout="@layout/preference_widget_switch_material3"
            android:defaultValue="false"/>
        <com.red.alert.ui.elements.SearchableMultiSelectPreference
            redalert:checkAll="@string/all"
            redalert:separator="|"
            android:defaultValue="@string/none"
            android:key="@string/selectedSecondaryCitiesPref"
            android:dialogTitle="@string/selectedSecondaryCities"
            android:title="@string/selectedSecondaryCities"
            android:summary="@string/selectedSecondaryCitiesDesc"
            app:iconSpaceReserved="false"
            android:icon="@drawable/ic_location_city"
            android:dependency="@string/secondaryEnabledPref"/>
        <com.red.alert.ui.elements.SoundListPreference
            android:key="@string/secondarySoundPref"
            android:title="@string/secondarySoundSelection"
            android:summary="@string/secondarySoundSelectionDesc"
            android:entries="@array/sounds"
            android:entryValues="@array/soundValues"
            android:defaultValue="@string/defaultSecondarySound"
            android:showSilent="true"
            android:ringtoneType="all"
            app:iconSpaceReserved="false"
            android:icon="@drawable/ic_volume_up"
            android:dependency="@string/secondaryEnabledPref"/>
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/secondaryAlertsTitle">
        <com.red.alert.ui.elements.SliderPreference
            android:key="@string/secondaryVolumePref"
            android:title="@string/secondaryVolume"
            android:summary="@string/secondaryVolumeDesc"
            android:defaultValue="@string/defaultAlertVolume"
            android:dialogMessage="@string/secondaryVolumeDesc"
            app:iconSpaceReserved="false"
            android:icon="@drawable/ic_volume_up"
            android:dependency="@string/secondaryEnabledPref"/>
        <SwitchPreferenceCompat
            android:key="@string/secondaryVibratePref"
            android:title="@string/secondaryVibrate"
            android:summary="@string/secondaryVibrateDesc"
            app:iconSpaceReserved="false"
            android:icon="@drawable/ic_vibration"
            app:widgetLayout="@layout/preference_widget_switch_material3"
            android:widgetLayout="@layout/preference_widget_switch_material3"
            android:defaultValue="true"
            android:dependency="@string/secondaryEnabledPref"/>
        <SwitchPreferenceCompat
            android:key="@string/secondarySilentOverridePref"
            android:title="@string/secondarySilentOverride"
            android:summary="@string/secondarySilentOverrideDesc"
            app:iconSpaceReserved="false"
            android:icon="@drawable/ic_do_not_disturb_off"
            app:widgetLayout="@layout/preference_widget_switch_material3"
            android:widgetLayout="@layout/preference_widget_switch_material3"
            android:defaultValue="true"
            android:dependency="@string/secondaryEnabledPref"/>
        <SwitchPreferenceCompat
            android:key="@string/secondaryAlertPopupPref"
            android:title="@string/showPopup"
            android:summary="@string/showSecondaryAlertPopupDesc"
            app:iconSpaceReserved="false"
            android:icon="@drawable/ic_open_in_new"
            app:widgetLayout="@layout/preference_widget_switch_material3"
            android:widgetLayout="@layout/preference_widget_switch_material3"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>